tests/errors/unclosed_parenthesis.vhpt
--TEST--
Unclosed parenthesis error
--FILE--
<?php
echo (1 + 2;
--EXPECT_ERROR--
Expected
